@@ -1,13 +1,14 @@
 AUX graylog2.confd 281 RMD160 2eeb1f5e59e085817e66af11990d97a248aa8dcf SHA1 cf8c52dd8b7fedff52647dbf6d22fc53207df62d SHA256 2197bd0ad5fe9fd97e1d7e637e07a3d9037be8e0d6208269209c53868fc15757
 AUX graylog2.initd 1150 RMD160 67fe9e6b766867c4fc0b5af1cb0037e960ad8ae4 SHA1 a4711f9483cfe2455123266a30f44ccdf94de43b SHA256 f23a42435740d0860058984c6f623a41a0e6e1b57a4ca1953c433beaf6c0823d
 AUX graylog2.initd-r1 1222 RMD160 bf37d0dfefdf828760e04b8022db1a4ecfd4148e SHA1 f66a04af086f67c9a1ff5b4f0c1cc2f24ff87fec SHA256 2f9256aa7f81b3b1d03debdab456ae078d35f31662c09c8f12f92001b428599f
-AUX graylog2.initd-r2 1268 RMD160 87967ac49eda90821a5f007e3840ad879cd05d64 SHA1 e86f3a2b23a85be4056f40c79b47c60d0b3a8fb1 SHA256 759ed97eb5e23283b4efd446d4595fffaf437c0183b4c743c6e2bf00faffe8e6
+AUX graylog2.initd-r2 1300 RMD160 39b40ec70ca61d23252ebebeb874631718ecbbe8 SHA1 9069af0a1a663d25ea77e820b54610012be7a6d4 SHA256 fcc2a852af707122f3ad391492e13c43ceb4081c0d96a282f60000d1c51c2d18
 DIST graylog2-server-0.9.3p1.tar.gz 443549 RMD160 8d9e8c76b9dee9ca327b62e30ceda314bdf813eb SHA1 bb4e433a579d71d6457dee6d1855c624af9e9ba7 SHA256 f7376853b5cb62e7241b9fae63c1fbb4b58a33ba816664ccbeaea2c5fa24f82f
 DIST graylog2-server-0.9.4.tar.gz 442264 RMD160 1f3df8cb666a588250a8c110a88d8b4c8c491693 SHA1 e573aafead6cb2662ca30248d4e412c893639454 SHA256 4f78fa583bf98d023d7fd9d0fa8e3f75940a7652df71b3fad1c8bf6f9f2b08a9
 DIST graylog2-server-0.9.4p1.tar.gz 445411 RMD160 050f7bc672dc988c4281bb584a8aaee9cdeeca1c SHA1 77841189f2e7cfa560446ecf5752736d66270985 SHA256 c29ef01766dbda9b0418a32cc384680273de7fea48b984f9c5eb7f288356a5a0
 EBUILD graylog2-0.9.3-r1.ebuild 747 RMD160 e267b8907c64ebcb316be076aa59a7f45346419f SHA1 09991ac28acceeca9d8001469c3c007e7a19e250 SHA256 f8de448ba672a22538823a5e5a3fcf0212dbadb5540afb368a12244a2c9a95cb
 EBUILD graylog2-0.9.3.ebuild 1020 RMD160 3196bd4573c64d845d7fc72d68d1581eba24a789 SHA1 9db1cb64cf4a4d1b145a34b75400f524fec63b10 SHA256 6fb40ffd8cc254dd839ae405d7df7e4cc6fe363cecd38e438d2957fa52742e0b
 EBUILD graylog2-0.9.4.ebuild 743 RMD160 6be97dd95ee12231b10e6e9560f62221b4cab163 SHA1 6b6f9736763dad443b92076fef0717316468585f SHA256 0de25a0e0b0253a92703a6dd3b5b7d37320abaecea8fe8d26a5e1006273a107e
-EBUILD graylog2-0.9.4_p1-r1.ebuild 794 RMD160 8534d16e23754aebb135915ffb7442c9ea0e039c SHA1 27be334e870bd055b554782f39cdda4eee40c268 SHA256 e548351a72b33bf802ace052436e22868dae0b8b88764056e6b2763ede1362c7
+EBUILD graylog2-0.9.4_p1-r1.ebuild 1147 RMD160 e06590e547840f5d85223b639320803b9b688c2f SHA1 580b8d15dd5dc4c7fba959ebb56e3f74122aacb1 SHA256 88cc0dc73a3effb488938b93d7d4b80489f060a53c0cd9a13116e7e4ef99b9d3
 EBUILD graylog2-0.9.4_p1.ebuild 748 RMD160 04b4546b5103e54ef503fe2ac1724c93a74506a1 SHA1 a30df2b90518f7424b20e36845a2e5606838fc43 SHA256 e6bc87dfc5364df3d6c1f4558ba58d41cf51d8a437e09caedb33e0de0460215f
-MISC ChangeLog 1175 RMD160 3b46d6a4db572ef02cdb6955e812a527fa440b22 SHA1 2efe97e2eeafe731c97f896c33d454743a9bbbf1 SHA256 39109f3fc7020cef1bb56fa4f31bb1c23869a6307a4bbc080ebdc1144267488d
+MISC ChangeLog 1530 RMD160 49aecfe9c015795c5a746a9936cad6f605e7531b SHA1 45173729b7c4540938c12991157ad46ade5c36b5 SHA256 97395f0dcf637f538e7b324257345dff3227e1e4629b024706184dafc3b62610
+MISC metadata.xml 353 RMD160 0b8d345856c4f9b29deeacebfb2a23adb69cdd3f SHA1 8873d79ee3a8d36b07208729b37282ac421a1126 SHA256 24fc5e02d0ce10ab5cbc207c0ea06d4d0c0d88e8d7a316f0ac35dc6badc6b288
